--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frux-list",
   "version": "0.0.0",
   "description": "Functional reactive lists styled to substitute into React's Flux architecture.",
-  "main": "index",
+  "main": "main",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
