--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Functional reactive lists styled to substitute into React's Flux architecture.",
   "main": "main",
   "scripts": {
-    "build": "mkdir -p test/lib && for i in lib/*.js; do echo \"var define = require('amdefine')(module);\" > test/$i; cat $i >> test/$i; done",
+    "build": "mkdir -p test/lib && mkdir -p test/lib/act && for i in `ls lib/*.js && ls lib/*/*.js`; do echo \"var define = require('amdefine')(module);\" > test/$i; cat $i >> test/$i; done",
     "test": "./node_modules/.bin/mocha ./test"
   },
   "repository": {
